<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchOnline"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            style="@style/SwitchCompatStyle"
            android:text="@string/i_on_my_way"/>

    <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchInfo"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            style="@style/SwitchCompatStyle"
            android:enabled="true"
            android:text="@string/receive_messages"/>

    <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/pushInfo"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            style="@style/SwitchCompatStyle"
            android:enabled="true"
            android:text="@string/receive_push_messages"/>

</androidx.appcompat.widget.LinearLayoutCompat>