<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:fadeScrollbars="false"
        android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            tools:context=".ui.login.LoginActivity">
        <TextView
                android:id="@+id/welcomeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:gravity="center"
                android:text="@string/login_welcome"
                android:textColor="@color/colorPrimary"
                android:textSize="32sp"
                android:fontFamily="@font/roboto_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        <TextView
                android:id="@+id/hintTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="36dp"
                android:layout_marginEnd="36dp"
                android:gravity="center"
                android:text="@string/continue_sign_in_to_your_account"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:fontFamily="@font/roboto_regular"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/welcomeTextView"/>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/loginLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="56dp"
                android:layout_marginStart="36dp"
                android:layout_marginEnd="36dp"
                app:hintTextColor="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hintTextView">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/loginTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_hint"
                    android:imeOptions="actionNext"
                    android:inputType="textVisiblePassword"
                    android:nextFocusDown="@id/passwordTextInputEditText"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:theme="@style/EditTextStyle"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginStart="36dp"
                android:layout_marginEnd="36dp"
                app:hintTextColor="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginLayout"
                app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_hint"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:theme="@style/EditTextStyle"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
                android:id="@+id/signInButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/BaseButtonStyle"
                android:textAllCaps="false"
                android:enabled="false"
                android:text="@string/signIn"
                android:background="@drawable/standart_button_selector"
                app:layout_constraintTop_toBottomOf="@+id/passwordLayout"/>

        <TextView
                android:id="@+id/questionsTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="36dp"
                android:layout_marginEnd="36dp"
                android:gravity="center"
                android:text="@string/new_user"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:fontFamily="@font/roboto_regular"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signInButton"/>

        <TextView
                android:id="@+id/registerTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?selectableItemBackground"
                android:layout_marginTop="16dp"
                android:layout_marginStart="36dp"
                android:layout_marginEnd="36dp"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:text="@string/register"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:fontFamily="@font/roboto_regular"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/questionsTextView"/>

        <include layout="@layout/preloader"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>