<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:fadeScrollbars="false"
        android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/userAgreementLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:background="@drawable/info_item_selector"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/userAgreementTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/BaseTextStyle"
                    android:layout_gravity="start"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/user_agreement"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/privacyPolicyLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:background="@drawable/info_item_selector"
                app:layout_constraintTop_toBottomOf="@+id/userAgreementLinearLayout"
                app:layout_constraintStart_toStartOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/privacyPolicyTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/BaseTextStyle"
                    android:layout_gravity="start"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/privacy_policy"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/termsDeliveryLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:background="@drawable/info_item_selector"
                app:layout_constraintTop_toBottomOf="@+id/privacyPolicyLinearLayout"
                app:layout_constraintStart_toStartOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/termsDeliveryTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/BaseTextStyle"
                    android:layout_gravity="start"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/terms_delivery"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:fillViewport="true"
                app:layout_scrollFlags="scroll"
                android:fadeScrollbars="false"
                android:scrollbars="vertical"
                app:layout_constraintTop_toBottomOf="@+id/termsDeliveryLinearLayout"
                app:layout_constraintBottom_toBottomOf="parent">

            <FrameLayout
                    android:id="@+id/viewsFrameLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:layout_marginTop="8dp">
            </FrameLayout>
        </ScrollView>

        <include layout="@layout/preloader"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

