<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_scrollFlags="scroll"
        android:fillViewport="true"
        android:fadeScrollbars="false"
        android:scrollbars="vertical">

    <androidx.cardview.widget.CardView
            android:id="@+id/card"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="4dp"
            app:cardMaxElevation="8dp"
            app:cardPreventCornerOverlap="true"
            app:cardCornerRadius="2dp"
            app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:padding="6dp"
                android:scrollbars="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <com.facebook.drawee.view.SimpleDraweeView
                    android:id="@+id/orderImageView"
                    android:layout_width="match_parent"
                    android:layout_height="275dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/descriptionTextView"
                    style="@style/BaseTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="false"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/orderImageView"/>

            <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/addressImageView"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_marginTop="8dp"
                    app:srcCompat="@drawable/ic_local_shipping"
                    app:layout_constraintTop_toBottomOf="@+id/descriptionTextView"
                    app:layout_constraintStart_toStartOf="parent"/>

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/addressTextView"
                    style="@style/BaseTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="56dp"
                    android:singleLine="false"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="8dp"
                    android:gravity="start|center"
                    app:layout_constraintStart_toEndOf="@+id/addressImageView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/descriptionTextView"/>

            <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/timeImageView"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_marginTop="8dp"
                    app:srcCompat="@drawable/ic_access_time"
                    app:layout_constraintTop_toBottomOf="@+id/addressImageView"
                    app:layout_constraintStart_toStartOf="parent"/>

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/timeTextView"
                    style="@style/BaseTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="56dp"
                    android:singleLine="false"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="8dp"
                    android:gravity="start|center"
                    android:text="@string/time_order"
                    tools:text="25 мин"
                    app:layout_constraintStart_toEndOf="@+id/timeImageView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/addressImageView"/>

            <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/priceImageView"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_marginTop="8dp"
                    app:srcCompat="@drawable/ic_attach_money"
                    app:layout_constraintTop_toBottomOf="@+id/timeImageView"
                    app:layout_constraintStart_toStartOf="parent"/>

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/priceTextView"
                    style="@style/BaseTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="56dp"
                    android:singleLine="false"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="8dp"
                    android:gravity="start|center"
                    android:text="@string/price_order"
                    tools:text="12 786 руб"
                    app:layout_constraintStart_toEndOf="@+id/priceImageView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/timeImageView"/>


            <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/acceptOrderButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/BaseButtonStyle"
                    android:textAllCaps="false"
                    android:text="@string/accept_order"
                    android:background="@drawable/standart_button_selector"
                    app:layout_constraintTop_toBottomOf="@+id/priceImageView"/>

            <include layout="@layout/preloader"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</ScrollView>